added developer and skill documentation
